# flappy-bird-rs

./: Cargo.toml  README.md  index.html
.github/: rust.yml
.github/workflows/: rust.yml
src/: components.rs  input.rs  main.rs  setup.rs
