[package]
name = "flappy-bird-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", default-features = false, features = ["bevy_winit", "render", "bevy_gltf", "png", "animation"] }
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
