[package]
name = "flappy-bird-rs"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
bevy = { version = "0.7", default-features = false, features = ["bevy_winit", "render", "bevy_gltf", "png", "animation"] }
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
